# apex_meridian_bank_platform

./: .env.example  .gitignore  AI_GOVERNANCE.md  ARCHITECTURE.md  DATA_MODEL.md  DEPLOYMENT.md  Jenkinsfile  Makefile  PIPELINES.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/backend/: Dockerfile
apps/backend/app/: __init__.py  main.py  models.py
apps/backend/tests/: test_api_contract.py
data/reference/: data_catalog.json  merchants.csv  prompt_registry.json  rbac_policies.json
data/sample/: account_balances.csv  audit_events.jsonl  customers.csv  fraud_alerts.csv  gold_metrics.json  transactions.csv
diagrams/: data_lineage.mmd  pipeline_flow.mmd  system_architecture.mmd
frontend/: Dockerfile  index.html
frontend/assets/: app.js  styles.css
infrastructure/docker/: airflow.Dockerfile  nginx.conf
infrastructure/kubernetes/base/: airflow-cronjob.yaml  backend-deployment.yaml  backend-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  kustomization.yaml  namespace.yaml
outputs/: apex_meridian_weekly_risk_report.md
pipelines/kafka/: producer.py  stream_checkpoint_validator.py  topics.yaml
pipelines/spark/: fraud_feature_job.py  lakehouse_jobs.py
scripts/: generate_weekly_report.py  run_quality_scorecards.py  score_fraud_sample.py  sync_warehouse_marts.py
src/apex_meridian/: __init__.py  config.py
src/apex_meridian/governance/: audit.py  (+4 more)
tests/: test_data_generation.py  test_governance_quality.py  test_governed_chatbot.py  test_lakehouse_integration.py
(+25 files in other folders)
