[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apex-meridian-bank-intelligence-platform"
version = "1.0.0"
description = "Enterprise-grade banking data engineering, lakehouse, fraud intelligence, and governed AI reporting platform."
requires-python = ">=3.10"
authors = [{ name = "Apex Meridian Bank Data Platform" }]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests", "apps/backend/tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

